--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor = '##4E458C'
 backgroundColor = '#202959'
-secondaryBackgroundColor = '#97f0a6'
-textColor = '#03080C'
+secondaryBackgroundColor = '#A66394'
+textColor = '#F2CFBB'
 font = 'sans-serif'
