--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,5 +1,5 @@
 [theme]
-primaryColor = '##4E458C'
+primaryColor = '#202959'
 backgroundColor = '#202959'
 secondaryBackgroundColor = '#A66394'
 textColor = '#F2CFBB'
