--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -1,6 +1,6 @@
 [theme]
 primaryColor = '#202959'
 backgroundColor = '#202959'
-secondaryBackgroundColor = '#A66394'
+secondaryBackgroundColor = '#202959'
 textColor = '#F2CFBB'
 font = 'sans-serif'
