--- a/.streamlit/config.toml
+++ b/.streamlit/config.toml
@@ -3,4 +3,4 @@ primaryColor = '#202959'
 backgroundColor = '#202959'
 secondaryBackgroundColor = '#202959'
 textColor = '#F2CFBB'
-font = 'sans-serif'
+font = 'open-sans'
